# TinyTank-v3

./: .gitignore  CMakeLists.txt  README.md
client/: .gitignore  CMakeLists.txt
client/inc/: GameManager.hpp  config.h.in
client/inc/Objects/: GameObject.hpp
client/inc/Objects/Tanks/: Tank.hpp  Tiger.hpp
client/inc/Screens/: GameScreen.hpp  LobbyScreen.hpp  MenuScreen.hpp  Screen.hpp  SplashScreen.hpp
client/inc/Tools/: MathsHelper.hpp
client/inc/UI/: ADrawable.hpp
client/src/: GameManager.cpp
client/src/Screens/: GameScreen.cpp  LobbyScreen.cpp  MenuScreen.cpp  SplashScreen.cpp
inc/: GameManager.hpp  GameScreen.hpp  LobbyScreen.hpp  MenuScreen.hpp  Screen.hpp  ScreenManager.hpp  SplashScreen.hpp  config.h.in
inc/UI/: ADrawable.hpp  Input.hpp
master/: config.js  package.json  server.js
master/apis/: client_api.js  server_api.js  web_api.js
master/emails/: register.pug
master/plugins/: background.js  router.js  token_auth.js
server/: CMakeLists.txt
server/inc/: config.h.in
server/src/: main.cpp
src/: GameScreen.cpp  LobbyScreen.cpp  MenuScreen.cpp  SplashScreen.cpp  main.cpp
web-api/: .gitignore  jsdoc.json  package.json  settings.json
web-api/.meteor/: .id  packages  versions
web-api/client/: main.html  main.js  main.less
web-api/client/layouts/: full-layout.html  fullLayout.html  fullLayout.js  layout.html
web-api/client/less/: overrides.import.less
web-api/client/partials/: footer.html  header.html  paypal.html
web-api/client/partials/auth/: login.html  login.js  logout.html  logout.js  register.html  register.js
web-api/client/partials/infos/: infos.html  infos.js
web-api/client/partials/search/: search.html  search.js
web-api/client/views/downloads/: download.js  downloads.html
web-api/client/views/home/: home.html  home.js
web-api/client/views/ladder/: ladder.html
web-api/client/views/profile/: profile.html  profile.js
web-api/client/views/servers/: serversList.html  serversList.js
web-api/lib/collections/: downloads.js  maps.js  matches.js  servers.js  tanks.js  users.js
web-api/lib/router/: hooks.js  router.js
web-api/server/: publish.js
web-api/server/lib/: startup.js
web-api/server/methods/: client.js  commons.js  methods.js  servers.js
web-api/server/publishes/: publish.js  users.js
web/.meteor/: packages  versions
web/client/: main.html  main.js
web/client/layouts/: full-layout.html  layout.html
web/client/partials/: footer.html  header.html  header.js  loading.html  notFound.html
web/client/partials/error/: error-item.html
web/client/partials/infos/: infos.html  infos.js
web/client/partials/login/: forgot-password.html  login.html  login.js  register.html  register.js  reset-password.html
web/client/views/home/: about.html  about.js  download.html  download.js  home.html  home.js
web/client/views/ladder/: ladder.html  ladder.js
web/client/views/profile/: profile.html  profile.js
web/client/views/search/: search.html  search.js
web/client/views/servers/: servers-list.html
web/lib/: router.js
web/server/: methods.js
